--- a/Style.css
+++ b/Style.css
@@ -582,14 +582,16 @@ section#CurrentEintro {
     background: rgb(34, 116, 195);
     background: linear-gradient(0deg, rgba(34, 116, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 }
+
 h1#achieveh112 {
-font-size: 7em;
-color: white;
-position: absolute;
-bottom: 40%;
-margin-left: 35%;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 7em;
+    color: white;
+    position: absolute;
+    bottom: 40%;
+    margin-left: 35%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 /*slideshow stuffs*/
 
 
@@ -699,7 +701,7 @@ div#dots {
 /*achievements page*/
 
 section#sectionformat1 {
-margin-top: 10%;
+    margin-top: 10%;
 }
 
 
@@ -1801,87 +1803,33 @@ h1#black {
         border-top: 3px solid white
     }
 
-    /*main page*/
-
-    img#centrallimg {
-        width: 110%;
-        margin-left: -1%;
-        position: relative;
-        margin-top: -10%;
-
-    }
-
-    img#headingimg {
-        width: 20%;
-        position: absolute;
-        bottom: 20%;
-        margin-left: 30%;
-        opacity: 50%;
-    }
-
-    img#headingimg:hover {
-        opacity: 90%;
-    }
-
-    h1.heading {
-        font-size: 7em;
-        color: white;
-        position: absolute;
-        bottom: 12%;
-        margin-left: 50%;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        opacity: 70%;
-    }
-
-    h1.heading:hover {
-        opacity: 100%;
-    }
-
-    div.bar {
-        background-color: rgb(0, 48, 119);
-        padding-top: 0.7%;
-        position: absolute;
-        top: 56.3vw;
-        width: 110%;
-        margin-left: -1%;
-    }
-
-    div.bars {
-        background-color: rgb(0, 48, 119);
-        padding-top: 0.7%;
-        width: 110%;
-        margin-left: -3%;
-
-        margin-top: 1%;
-    }
-
-    div#sidetext {
-        position: relative;
-        left: 3%;
-        padding-top: 5%;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-
-    /*ABout us page*/
-
+    /*about us page*/
     section.sectionformat {
-        margin-left: -0.5%;
+        margin-left: -0.6%;
         width: 101%;
         padding-top: 40%;
-        background-image: url(websitebackground.png);
+        background-color: rgba(0, 0, 0, 0.897);
     }
-    
-    div#centralimg {
-        width: 110%;
-        margin-left: -5%;
-        max-height: 10%;
-    
+
+    h1#abouth1 {
+        font-size: 3em;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+        color: aliceblue;
+        position: absolute;
+        top: 11%;
+        left: 42%;
     }
-    
-    
-    
-    
+
+    img#centralimg1 {
+        position: absolute;
+        top: 21%;
+        left: 20%;
+        width: 60%;
+        padding-top: -3%;
+
+    }
+
     div#secondsection0 {
         width: 110%;
         margin-left: -5%;
@@ -1890,28 +1838,28 @@ h1#black {
         padding-bottom: 40%;
         margin-bottom: -1%;
     }
-    
+
     section#aboutintro {
         margin-bottom: 1%;
     }
-    
+
     div#smolimgplace1 {
         float: right;
         position: relative;
-        padding-right: 10%;
+        padding-right: 15%;
     }
-    
+
     img#smolimg1 {
-        width: 70%;
+        width: 340px;
+        height: 340px;
         margin-top: 20%;
-        margin-right: 25%;
         margin-bottom: 5%;
         border-radius: 25px;
-        border: 50px solid rgba(45, 143, 255, 0.705);
-    
-    
+        border: 25px solid rgba(45, 143, 255, 0.705);
+
+
     }
-    
+
     div#sidetext0 {
         position: relative;
         left: 3%;
@@ -1920,56 +1868,156 @@ h1#black {
         margin-right: 5%;
         float: left;
         width: 30%;
-    
+
     }
-    
+
     h1.subH1 {
-        font-size: 3em;
+        font-size: 2em;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         text-align: center;
         color: aliceblue;
     }
-    
+
     p.text1 {
-        font-size: 1.5em;
+        font-size: 1.1em;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: white;
     }
-    
 
-    /*contactus page*/
+    /*about us bar*/
+    div#aboutusbar {
+        background-color: rgb(0, 48, 119);
+        padding-top: 0.7%;
+        position: absolute;
+
+        width: 110%;
+        margin-left: -1%;
+        margin-top: 0%;
+    }
+
+    /* members sectionin aboutus*/
+    section#members {
+        padding-top: 1%;
+        margin-left: -0.5%;
+        width: 101%;
+        background: rgb(181, 112, 0);
+        background: radial-gradient(circle, rgba(181, 112, 0, 1) 0%, rgba(0, 109, 238, 1) 100%);
+    }
+
+    h1#members {
+        padding-bottom: 15%;
+    }
+
+    div#memba {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        display: flex;
+        padding-bottom: 20%;
+        margin-top: -18%;
+    }
+
+    div.member {
+        font-size: 1em;
+        margin-bottom: 3%;
+        margin-left: 3%;
+        margin-right: 3%;
+        width: fit-content;
+        padding: 3%;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        background-color: rgb(255, 201, 100);
+        border-radius: 5%;
+        margin-top: 5%;
+    }
+
+    img#memba1 {
+        border-radius: 10%;
+    }
+
+    h4#memba {
+        font-family: 'Courier New', Courier, monospace;
 
 
-    section#contactusintro {
+    }
+
+    p#memba {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: bolder;
+    }
+
+    /*current events*/
+    section#CurrentEintro {
         width: 110%;
         margin-left: -5%;
-        padding-top: 1vw;
-        padding-bottom: 1vw;
-        background: rgb(75, 44, 0);
-        background: linear-gradient(90deg, rgba(75, 44, 0, 1) 0%, rgba(180, 96, 0, 1) 35%, rgba(0, 76, 205, 1) 100%);
+        padding-top: 3%;
+        margin-top: -1%;
+        padding-bottom: 10%;
+        background: rgb(34, 116, 195);
+        background: linear-gradient(0deg, rgba(34, 116, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
     }
 
-    div#form {
-        margin-bottom: 2vw;
+    h1#achieveh112 {
+        font-size: 7em;
+        color: white;
+        position: absolute;
+        bottom: 35%;
+        margin-left: 25%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
 
-    iframe#contactform {
-        padding-left: 36.5%;
-    }
+    /*achievenemtns section*/
 
-    div#maps {
+    section#Achievementsintro {
+        width: 111%;
+        margin-left: -5%;
+        margin-top: -3.5%;
+        padding-bottom: 1%;
         padding-top: 1%;
-        padding-bottom: 2%;
-
-        background-color: rgba(233, 233, 233, 0.445);
+        background: rgb(34, 61, 195);
+        background: linear-gradient(0deg, rgba(34, 61, 195, 1) 0%, rgba(23, 23, 23, 1) 100%);
     }
 
-    iframe#maps {
-        padding-left: 35%;
+
+
+    ul#achieve {
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: orange;
+        font-weight: bolder;
     }
 
-    h1#black {
-        color: black;
+    h1#achievetitle {
+        font-family: 'Open Sans', sans-serif;
+        text-align: center;
+        font-size: 3em;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+        color: aliceblue;
+
     }
 
-} 
+    img#centralimg2 {
+        position: absolute;
+        top: 20%;
+        left: 0%;
+        width: 100%;
+        padding-top: -3%;
+
+    }
+
+
+
+    h1#achieveh1 {
+        font-size: 7em;
+        color: white;
+        position: absolute;
+        bottom: 50%;
+        margin-left: 35%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+    }
+
+
+}
