--- a/Style.css
+++ b/Style.css
@@ -857,17 +857,100 @@ div#thirdsection {
 }
 
 /*sponsors*/
-img#sponsorimg {
+
+
+h1#achieveh113 {
+    font-size: 7em;
+    color: white;
+    position: absolute;
+    bottom: 45%;
+    margin-left: 33%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
+
+img#apple {
+    margin-left: 38%;
+    width: 300px;
+    height: 200px;
+}
+
+img#te {
+    margin-left: 22%;
+    width: 300px;
+    height: 200px;
+}
+
+img#qorvo {
     margin-left: 0%;
+    width: 200px;
+    height: 200px;
 }
 
-img#sponsorimg1 {
-    margin-left: 10%;
+img#PG {
+    margin-left: 0%;
+    width: 200px;
+    height: 200px;
 }
 
-img#sponsorimg3 {
-    margin-left: 42%;
+img#abco {
+    margin-left: 20%;
+    width: 300px;
+    height: 200px;
 }
+
+img#kali {
+    margin-left: 0%;
+    width: 250px;
+    height: 150px;
+    padding-bottom: 1%;
+}
+
+img#will {
+    margin-left: 0%;
+    padding-bottom: 1%;
+    width: 250px;
+    height: 150px;
+}
+
+img#gtc {
+    margin-left: 26%;
+    width: 300px;
+    height: 150px;
+}
+
+img#ptsa {
+    margin-left: 0%;
+    width: 350px;
+    height: 200px;
+}
+
+img#parents {
+    margin-left: 38%;
+    width: 300px;
+    height: 200px;
+}
+
+img#united {
+    margin-left: 12%;
+    width: 300px;
+    height: 150px;
+}
+
+img#network {
+    margin-left: 0%;
+    width: 350px;
+    height: 150px;
+}
+
+img#HT {
+    margin-left: 0%;
+    width: 300px;
+    height: 200px;
+}
+
+
 
 section#resourceintro {
     width: 100%;
@@ -909,6 +992,17 @@ h1#achieveh11 {
 }
 
 /*contactus page*/
+
+
+h1#achieveh114 {
+    font-size: 7em;
+    color: white;
+    position: absolute;
+    bottom: 35%;
+    margin-left: 30%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
 
 section#contactusintro {
     width: 110%;
@@ -2163,7 +2257,7 @@ h1#black {
         bottom: 35%;
         margin-left: 30%;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
+
     }
 
 
