--- a/Style.css
+++ b/Style.css
@@ -267,7 +267,6 @@ section.sponsorsection {
     margin-left: -5%;
     padding-top: 5%;
     padding-bottom: 4%;
-    border-top: blue 5px solid;
 
 }
 
@@ -1031,7 +1030,12 @@ h1#black {
 
 
 
-@media (max-width : 750px) {
+@media (max-width : 800px) {
+
+    body {
+        /*animation: blinking 2s infinite;*/
+        overflow-x: hidden;
+    }
     header {
         background-color: black;
         margin: -0.75%;
@@ -1159,11 +1163,12 @@ h1#black {
     /* second section */
 
     div#secondsection {
-        width: 110%;
-        margin-left: -5%;
+        width: 105%;
+        margin-right: -1%;
         background: rgb(75, 44, 0);
         background: linear-gradient(90deg, rgba(75, 44, 0, 1) 0%, rgba(180, 96, 0, 1) 35%, rgba(0, 76, 205, 1) 100%);
         position: absolute;
+        padding-bottom: 5%;
     }
 
     section#aboutus {
@@ -1231,16 +1236,7 @@ h1#black {
 
     }
 
-    /* section spacer*/
 
-    div.bars {
-        background-color: rgb(0, 48, 119);
-        padding-top: 1.35%;
-        position: absolute;
-        top: 49.4%;
-        width: 110%;
-        margin-left: -3%;
-    }
 
 
 /* sponsor section */
@@ -2084,7 +2080,7 @@ h1#black {
 
 }
 */
-@media (min-width : 1200px) and (max-width : 1400px) {
+@media (min-width : 1200px) and (max-width : 2000px) {
 
     /*nav bar*/
 
