--- a/Style.css
+++ b/Style.css
@@ -2022,7 +2022,7 @@ h1#black {
 
 }
 }
-
+/* 
 /* 
 @media (min-width : 1720px) {
     div.bars {
@@ -2079,10 +2079,11 @@ h1#black {
 
 
 }
-*/
+*/ /*
 @media (min-width : 1200px) and (max-width : 2000px) {
 
     /*nav bar*/
+    /*
 
     header {
         background-color: black;
@@ -2169,7 +2170,7 @@ h1#black {
 
     a.navobj:hover {}
 
-    /* keeping an overline when on the page */
+    /* keeping an overline when on the page 
 
 
     div#sponsors {
@@ -2200,7 +2201,7 @@ h1#black {
         border-top: 3px solid white
     }
 
-    /*about us page*/
+    /*about us page
     section.sectionformat {
         margin-left: -0.6%;
         width: 101%;
@@ -2281,7 +2282,7 @@ h1#black {
         color: white;
     }
 
-    /*about us bar*/
+    /*about us bar
     div#aboutusbar {
         background-color: rgb(0, 48, 119);
         padding-top: 0.7%;
@@ -2292,7 +2293,7 @@ h1#black {
         margin-top: 0%;
     }
 
-    /* members sectionin aboutus*/
+    /* members sectionin aboutus
     section#members {
         padding-top: 1%;
         margin-left: -0.5%;
@@ -2344,7 +2345,7 @@ h1#black {
         font-weight: bolder;
     }
 
-    /*current events*/
+    /*current events
     section#CurrentEintro {
         width: 110%;
         margin-left: -5%;
@@ -2364,7 +2365,7 @@ h1#black {
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
 
-    /*achievenemtns section*/
+    /*achievenemtns section
 
     section#Achievementsintro {
         width: 111%;
@@ -2414,7 +2415,7 @@ h1#black {
 
     }
 
-    /*resources*/
+    /*resources
     h1#achieveh11 {
         font-size: 7em;
         color: white;
@@ -2425,7 +2426,7 @@ h1#black {
 
     }
 
-    /*sponsors*/
+    /*sponsors
 
     img#apple {
         margin-left: 38%;
@@ -2519,7 +2520,7 @@ h1#black {
 
     }
 
-    /*contactus page*/
+    /*contactus page
 
     section#contactusintro {
         width: 110%;
@@ -2566,4 +2567,4 @@ h1#black {
     }
 
 
-}
+} */
