--- a/Style.css
+++ b/Style.css
@@ -597,8 +597,8 @@ h1#achieveh112 {
 }
 
 img.slideimage {
-    width: 52.1vw;
-    height: 30vw;
+    max-width: 50vw;
+    max-height: 50vw;
 }
 
 /* Hide the images by default */
@@ -638,12 +638,17 @@ img.slideimage {
 /* Caption text */
 div.text {
     color: #f2f2f2;
-    font-size: 15px;
+    font-size: 20px;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
-    width: 100%;
+    width: 50%;
+    margin-left: 25%;
+
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: black;
+
 }
 
 
@@ -1485,7 +1490,7 @@ h1#black {
     }
 
     p.text1 {
-        font-size: 0.2em;
+        font-size: 5px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: white;
     }
@@ -1587,8 +1592,8 @@ h1#black {
     }
 
     img.slideimage {
-        width: 52.1vw;
-        height: 30vw;
+        max-width: 30vw;
+        max-height: 30vw;
     }
 
     /* Hide the images by default */
@@ -1628,12 +1633,16 @@ h1#black {
     /* Caption text */
     div.text {
         color: #f2f2f2;
-        font-size: 10px;
-        padding: 10px 12px;
+        font-size: 5px;
+        padding: 8px 12px;
         position: absolute;
         bottom: 8px;
-        width: 100%;
+        width: 50%;
+        margin-left: 15%;
+    background-color: rgba(0, 0, 0, 0.651);
         text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
     }
 
 
@@ -2019,8 +2028,8 @@ h1#black {
     }
 
     iframe#contactform {
-        margin-left: 25%;
-        width: 220px;
+        margin-left: 20%;
+        width: 280px;
         height: 900px;
 
     }
